--- a/handlers/www/default/landing.html
+++ b/handlers/www/default/landing.html
@@ -50,6 +50,7 @@
     </p>
     <input id="stack" type="hidden" name="stack" value=""/>
     <input id="stack_name" type="hidden" name="stack_name" value=""/>
+    <input id="cqr_url" type="hidden" name="cqr_url" value=""/>
     <input id="image_name" type="hidden" name="image_name" value=""/>
   </form>
 
@@ -150,6 +151,10 @@
               var stackName = getParameterByName('stack_name');
               if (stackName) {
                 document.getElementById('stack_name').value = stackName;
+              }
+              var cqrUrl = getParameterByName('cqr_url');
+              if (stackName) {
+                document.getElementById('cqr_url').value = cqrUrl;
               }
               var imageName = getParameterByName('image_name');
               if (imageName) {
